--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             </div>
             <div class="col-md-4">
                 <h3 class="h3">Contact</h3>
-                <p>Phone: 1234567890</p>
+                <p>Phone: 9517048512</p>
                 <p>Email: <a href="mailto:kuldeep.helps@gmail.com">kuldeep.helps@gmail.com</a></p>
                 <div class="footer-social">
                     <span><i class="fa-brands fa-facebook"></i></span>
@@ -495,6 +495,11 @@
             </div>
         </div>
     </div>
+
+
+    <a href="https://wa.me/919517048512" class="whatsapp-float" target="_blank">
+        <img src="image/gallery/whatsapp1.png" alt="WhatsApp" />
+    </a>
 
 
     <!-- Appointment Model -->
