--- a/index.html
+++ b/index.html
@@ -497,9 +497,9 @@
     </div>
 
 
-    <a href="https://wa.me/919517048512" class="whatsapp-float" target="_blank">
+    <!-- <a href="https://wa.me/919517048512" class="whatsapp-float" target="_blank">
         <img src="image/gallery/whatsapp1.png" alt="WhatsApp" />
-    </a>
+    </a> -->
 
 
     <!-- Appointment Model -->
