--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
     <!-- Flatpickr CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script> -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+
+
 
 
 
@@ -65,7 +74,9 @@
             <div class="col-md-7">
                 <div class="hero-left">
                     <div>
-                        <h2>Free Trial Session <br> With a Trainer</h2>
+                        <!-- <h2 data-aos="fade-up">Free Trial Session <br> With a Trainer</h2> -->
+                        <h2 class="wow animate__animated animate__slideInLeft">Free Trial Session <br> With a Trainer</h2>
+
                         <div class="hero-section-btn">
                             <button class="btn hero-btn">Detailed</button>
                         </div>
@@ -93,10 +104,10 @@
             </div>
         </div> -->
 
-        <div class="row " id="broadcard">
-            <h3>Reason To Join</h3>
+        <div class="row "  id="broadcard">
+            <h3 class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="5s">Reason To Join</h3>
 
-            <div class="col-md-6 mt-3">
+            <div class="col-md-6 mt-3" data-aos="slide-right">
                 <div class="broadcard-box">
                     <div class="broadcard-left">
                         <span class="icon"><i class="fa-solid fa-dumbbell"></i></span>
@@ -111,7 +122,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 mt-3">
+            <div class="col-md-6 mt-3" data-aos="slide-left">
                 <div class="broadcard-box">
                     <div class="broadcard-left">
                         <span class="icon"><i class="fa-solid fa-dumbbell"></i></span>
@@ -126,7 +137,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 mt-3">
+            <div class="col-md-6 mt-3" data-aos="slide-right">
                 <div class="broadcard-box">
                     <div class="broadcard-left">
                         <span class="icon"><i class="fa-solid fa-dumbbell"></i></span>
@@ -141,7 +152,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 mt-3">
+            <div class="col-md-6 mt-3" data-aos="slide-left">
                 <div class="broadcard-box">
                     <div class="broadcard-left">
                         <span class="icon"><i class="fa-solid fa-dumbbell"></i></span>
@@ -299,7 +310,7 @@
     <div class="container" id="about">
         <div class="row">
             <div class="col-md-6">
-                <div class="about-left">
+                <div class="about-left wow animate__fadeIn">
                     <h3>About</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam eveniet, fugit iusto
                         quaerat quibusdam inventore vel, explicabo possimus itaque minima commodi nihil distinctio
@@ -333,7 +344,7 @@
 
     <!-- Gallery Section  -->
 
-    <div class="container" id="gallery" style="position: relative;">
+    <div class="container" data-aos="fade-up" id="gallery" style="position: relative;">
         <h3>Gallery</h3>
         <div class="row">
             <div class="col-md-4 col-sm-6 col-12">
@@ -550,6 +561,23 @@
         'resizeDuration': 200,
         'wrapAround': true
     });
+</script>
+
+
+<script>
+//     $(document).ready(function() {
+//     AOS.init();
+// });
+
+$(document).ready(function() {
+        AOS.init();
+    });
+
+$(document).ready(function() {
+    new WOW().init();
+});
+
+
 </script>
 
 
